--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@ figure figcaption {
 
 #arjun-page {
   width: 100%;
-  overflow: hidden;
+  overflow:hidden;
   position: relative; 
 }
 
@@ -88,7 +88,7 @@ figure figcaption {
   float: left;
   width: 300px;
   position: fixed;
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
   z-index: 1001;
   background: #f2f3f7;
   -webkit-transition: 0.5s;
@@ -110,7 +110,7 @@ figure figcaption {
 #arjun-aside .author-img {
   width: 150px;
   height: 150px;
-  margin: 2rem auto;
+  margin: 1rem auto;
   margin-bottom: 30px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
