--- a/public/css/style.css
+++ b/public/css/style.css
@@ -581,7 +581,8 @@ text-align: center;}
   .services h3 {
 	font-family: "Quicksand", Arial, sans-serif;
 	font-size: 16px;
-	font-weight: 500; }
+	font-weight: 500;
+text-align: center;}
   .services.color-2 {
 	border-bottom: 2px solid #ec5453; }
 	.services.color-2 .icon2 i {
