--- a/public/css/style.css
+++ b/public/css/style.css
@@ -578,11 +578,15 @@ text-align: center;}
 	.services .icon2 i {
 	  font-size: 30px;
 	  color: #2c98f0; }
-  .services h3 {
+.services h4 {
 	font-family: "Quicksand", Arial, sans-serif;
 	font-size: 16px;
 	font-weight: 500;
-text-align: center;}
+text-align:center;}
+  .services h3 {
+	font-family: "Quicksand", Arial, sans-serif;
+	font-size: 16px;
+	font-weight: 500;}
   .services.color-2 {
 	border-bottom: 2px solid #ec5453; }
 	.services.color-2 .icon2 i {
